--- a/src/main/resources/handlebars/Java/libraries/retrofit/api.mustache
+++ b/src/main/resources/handlebars/Java/libraries/retrofit/api.mustache
@@ -56,6 +56,9 @@ public interface {{classname}} {
    * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}
 {{/parameters}}
    * @param cb callback method
+{{#vendorExtensions.x-is-deprecated}}
+   * @deprecated
+{{/vendorExtensions.x-is-deprecated}}
 {{#externalDocs}}
    * {{description}}
    * @see <a href="{{url}}">{{summary}} Documentation</a>
@@ -72,6 +75,9 @@ public interface {{classname}} {
   {{/@first}}
   {{/formParams}}
   @{{httpMethod}}("{{{path}}}")
+  {{#vendorExtensions.x-is-deprecated}}
+  @Deprecated
+  {{/vendorExtensions.x-is-deprecated}}
   void {{operationId}}(
     {{#parameters}}{{>libraries/retrofit/queryParams}}{{>libraries/retrofit/pathParams}}{{>libraries/retrofit/headerParams}}{{>libraries/retrofit/bodyParams}}{{>libraries/retrofit/formParams}}{{>libraries/retrofit/cookieParams}}, {{/parameters}}Callback<{{#returnType}}{{{returnType}}}{{/returnType}}{{^returnType}}Object{{/returnType}}> cb
   );
