--- a/src/main/resources/handlebars/python/api.mustache
+++ b/src/main/resources/handlebars/python/api.mustache
@@ -56,7 +56,7 @@ class {{classname}}(object):
 
         :param async_req bool
 {{#parameters}}
-        :param {{dataType}} {{paramName}}:{{#description}} {{{description}}}{{/description}}{{#required}} (required){{/required}}{{#optional}}(optional){{/optional}}
+        :param {{dataType}} {{paramName}}:{{#description}} {{{description}}}{{/description}}{{#required}} (required){{/required}}{{#optional}}(optional){{/optional}}{{#deprecated}} (deprecated){{/deprecated}}
 {{/parameters}}
         :return: {{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}None{{/returnType}}
                  If the method is called asynchronously,
@@ -93,7 +93,7 @@ class {{classname}}(object):
 
         :param async_req bool
 {{#parameters}}
-        :param {{dataType}} {{paramName}}:{{#description}} {{{description}}}{{/description}}{{#required}} (required){{/required}}{{#optional}}(optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/optional}}
+        :param {{dataType}} {{paramName}}:{{#description}} {{{description}}}{{/description}}{{#required}} (required){{/required}}{{#optional}}(optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/optional}}{{#deprecated}} (deprecated){{/deprecated}}
 {{/parameters}}
         :return: {{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}None{{/returnType}}
                  If the method is called asynchronously,
@@ -172,6 +172,10 @@ class {{classname}}(object):
         if '{{paramName}}' in params:
             path_params['{{baseName}}'] = params['{{paramName}}']{{#isListContainer}}  # noqa: E501
             collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isListContainer}}  # noqa: E501
+            {{#deprecated}}
+            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
+            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=3) # noqa: E501
+            {{/deprecated}} 
 {{/pathParams}}
 
         query_params = []
@@ -179,6 +183,10 @@ class {{classname}}(object):
         if '{{paramName}}' in params:
             query_params.append(('{{baseName}}', params['{{paramName}}'])){{#isListContainer}}  # noqa: E501
             collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isListContainer}}  # noqa: E501
+            {{#deprecated}}
+            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
+            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=3) # noqa: E501
+            {{/deprecated}}            
 {{/queryParams}}
 
         header_params = {}
@@ -186,6 +194,10 @@ class {{classname}}(object):
         if '{{paramName}}' in params:
             header_params['{{baseName}}'] = params['{{paramName}}']{{#isListContainer}}  # noqa: E501
             collection_formats['{{baseName}}'] = '{{collectionFormat}}'{{/isListContainer}}  # noqa: E501
+            {{#deprecated}}
+            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=2) # noqa: E501
+            warnings.warn(f"The API operation '{{{../operationId}}}' received a deprecated parameter '{{{paramName}}}'", DeprecationWarning, stacklevel=3) # noqa: E501
+            {{/deprecated}}
 {{/headerParams}}
 
         form_params = []
