--- a/src/main/resources/handlebars/Java/libraries/retrofit2/play24/api.mustache
+++ b/src/main/resources/handlebars/Java/libraries/retrofit2/play24/api.mustache
@@ -30,7 +30,7 @@ public interface {{classname}} {
    * {{summary}}
    * {{notes}}
 {{#parameters}}
-   * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}
+   * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}{{#deprecated}} (deprecated){{/deprecated}}
 {{/parameters}}
    * @return Call&lt;{{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}Object{{/returnType}}&gt;
    */
