--- a/src/main/resources/handlebars/Java/libraries/jersey3/api.mustache
+++ b/src/main/resources/handlebars/Java/libraries/jersey3/api.mustache
@@ -15,9 +15,13 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+import java.util.logging.Logger;
+import java.util.logging.Level;
+
 {{>generatedAnnotation}}
 {{#operations}}
 public class {{classname}} {
+    private static final Logger LOGGER = Logger.getLogger({{classname}}.class.getName());
     private ApiClient {{localVariablePrefix}}apiClient;
 
     public {{classname}}() {
@@ -42,7 +46,7 @@ public class {{classname}} {
      * {{summary}}
      * {{notes}}
     {{#parameters}}
-     * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}
+     * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}{{#deprecated}} (deprecated){{/deprecated}}
     {{/parameters}}
     {{#returnType}}
      * @return {{returnType}}
@@ -72,6 +76,11 @@ public class {{classname}} {
         // create path and map variables
         String {{localVariablePrefix}}localVarPath = "{{{path}}}"{{#pathParams}}
                 .replaceAll("\\{" + "{{baseName}}" + "\\}", {{localVariablePrefix}}apiClient.escapeString({{{paramName}}}.toString())){{/pathParams}};
+        {{#pathParams}}
+        {{#deprecated}}
+        LOGGER.log(Level.WARNING, "The API operation '{{../operationId}}' received a deprecated parameter '{{paramName}}'");
+        {{/deprecated}}
+        {{/pathParams}}
 
         // query params
         {{javaUtilPrefix}}List<Pair> {{localVariablePrefix}}localVarQueryParams = new {{javaUtilPrefix}}ArrayList<Pair>();
@@ -80,11 +89,19 @@ public class {{classname}} {
 
         {{#queryParams}}
         {{localVariablePrefix}}localVarQueryParams.addAll({{localVariablePrefix}}apiClient.parameterToPairs("{{#collectionFormat}}{{{collectionFormat}}}{{/collectionFormat}}", "{{baseName}}", {{paramName}}));
+        if ({{paramName}} != null) {
+            {{#deprecated}}
+            LOGGER.log(Level.WARNING, "The API operation '{{../operationId}}' received a deprecated parameter '{{paramName}}'");
+            {{/deprecated}}
+        }
         {{/queryParams}}
 
         {{#headerParams}}
         if ({{paramName}} != null) {
             {{localVariablePrefix}}localVarHeaderParams.put("{{baseName}}", {{localVariablePrefix}}apiClient.parameterToString({{paramName}}));
+            {{#deprecated}}
+            LOGGER.log(Level.WARNING, "The API operation '{{../operationId}}' received a deprecated parameter '{{paramName}}'");
+            {{/deprecated}}
         }
         {{/headerParams}}
         {{#isForm}}
