--- a/src/main/resources/handlebars/Java/libraries/resteasy/api.mustache
+++ b/src/main/resources/handlebars/Java/libraries/resteasy/api.mustache
@@ -22,9 +22,13 @@ import java.util.List;
 import java.util.Map;
 {{/fullJavaUtil}}
 
+import java.util.logging.Logger;
+import java.util.logging.Level;
+
 {{>generatedAnnotation}}
 {{#operations}}
 public class {{classname}} {
+  private static final Logger LOGGER = Logger.getLogger({{classname}}.class.getName());
   private ApiClient {{localVariablePrefix}}apiClient;
 
   public {{classname}}() {
@@ -48,7 +52,7 @@ public class {{classname}} {
   /**
    * {{summary}}
    * {{notes}}{{#parameters}}
-   * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}{{/parameters}}{{#returnType}}
+   * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}{{#deprecated}} (deprecated){{/deprecated}}{{/parameters}}{{#returnType}}
    * @return {{{returnType}}}{{/returnType}}
    * @throws ApiException if fails to make API call
    {{#vendorExtension.x-is-enum}}
@@ -73,6 +77,11 @@ public class {{classname}} {
     // create path and map variables
     String {{localVariablePrefix}}localVarPath = "{{{path}}}".replaceAll("\\{format\\}","json"){{#pathParams}}
       .replaceAll("\\{" + "{{baseName}}" + "\\}", {{localVariablePrefix}}apiClient.escapeString({{{paramName}}}.toString())){{/pathParams}};
+    {{#pathParams}}
+    {{#deprecated}}
+    LOGGER.log(Level.WARNING, "The API operation '{{../operationId}}' received a deprecated parameter '{{paramName}}'");
+    {{/deprecated}}
+    {{/pathParams}}
 
     // query params
     {{javaUtilPrefix}}List<Pair> {{localVariablePrefix}}localVarQueryParams = new {{javaUtilPrefix}}ArrayList<Pair>();
@@ -81,10 +90,19 @@ public class {{classname}} {
 
     {{#queryParams}}
     {{localVariablePrefix}}localVarQueryParams.addAll({{localVariablePrefix}}apiClient.parameterToPairs("{{#collectionFormat}}{{{collectionFormat}}}{{/collectionFormat}}", "{{baseName}}", {{paramName}}));
+    {{#deprecated}}
+    if ({{paramName}} != null) {
+      LOGGER.log(Level.WARNING, "The API operation '{{../operationId}}' received a deprecated parameter '{{paramName}}'");
+    }
+    {{/deprecated}}
     {{/queryParams}}
 
-    {{#headerParams}}if ({{paramName}} != null)
+    {{#headerParams}}if ({{paramName}} != null) {
       {{localVariablePrefix}}localVarHeaderParams.put("{{baseName}}", {{localVariablePrefix}}apiClient.parameterToString({{paramName}}));
+      {{#deprecated}}
+      LOGGER.log(Level.WARNING, "The API operation '{{../operationId}}' received a deprecated parameter '{{paramName}}'");
+      {{/deprecated}}
+    }
     {{/headerParams}}
     {{#isForm}}
     {{#formParams}}if ({{paramName}} != null)
