--- a/src/main/resources/handlebars/Java/libraries/retrofit/api.mustache
+++ b/src/main/resources/handlebars/Java/libraries/retrofit/api.mustache
@@ -24,7 +24,7 @@ public interface {{classname}} {
    * Sync method
    * {{notes}}
 {{#parameters}}
-   * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}
+   * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}{{#deprecated}} (deprecated){{/deprecated}}
 {{/parameters}}
 {{#returnType}}
    * @return {{returnType}}
@@ -53,7 +53,7 @@ public interface {{classname}} {
    * {{summary}}
    * Async method
 {{#parameters}}
-   * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}
+   * @param {{paramName}} {{description}}{{#required}} (required){{/required}}{{^required}} (optional{{#defaultValue}}, default to {{{.}}}{{/defaultValue}}){{/required}}{{#deprecated}} (deprecated){{/deprecated}}
 {{/parameters}}
    * @param cb callback method
 {{#vendorExtensions.x-is-deprecated}}
