--- a/src/main/resources/handlebars/python/setup.mustache
+++ b/src/main/resources/handlebars/python/setup.mustache
@@ -16,7 +16,7 @@ VERSION = "{{packageVersion}}"
 # prerequisite: setuptools
 # http://pypi.python.org/pypi/setuptools
 
-REQUIRES = ["urllib3 >= 1.15", "six >= 1.10", "certifi", "python-dateutil"]
+REQUIRES = ["urllib3 >= 1.15", "six >= 1.10", "certifi", "python-dateutil", "typing_extensions >= 4.5"]
 {{#asyncio}}
 REQUIRES.append("aiohttp")
 {{/asyncio}}
