--- a/src/main/resources/handlebars/Java/libraries/okhttp4-gson/api.mustache
+++ b/src/main/resources/handlebars/Java/libraries/okhttp4-gson/api.mustache
@@ -72,7 +72,7 @@ public class {{classname}} {
      * @return Call to execute
      * @throws ApiException If fail to serialize the request body object
      {{#vendorExtensions.x-is-deprecated}}
-     * @deprecated
+     * @deprecated {{#vendorExtensions.x-alternative-operation-id}}Use {@link #{{vendorExtensions.x-alternative-operation-id}}Call} instead{{/vendorExtensions.x-alternative-operation-id}}
      {{/vendorExtensions.x-is-deprecated}}
      {{#externalDocs}}
      * {{description}}
@@ -183,7 +183,7 @@ public class {{classname}} {
      * @return {{returnType}}{{/returnType}}
      * @throws ApiException If fail to call the API, e.g. server error or cannot deserialize the response body
      {{#vendorExtensions.x-is-deprecated}}
-     * @deprecated
+     * @deprecated {{#vendorExtensions.x-alternative-operation-id}}Use {@link #{{vendorExtensions.x-alternative-operation-id~}} } instead{{/vendorExtensions.x-alternative-operation-id}}
      {{/vendorExtensions.x-is-deprecated}}
      {{#externalDocs}}
      * {{description}}
@@ -205,7 +205,7 @@ public class {{classname}} {
      * @return ApiResponse&lt;{{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}Void{{/returnType}}&gt;
      * @throws ApiException If fail to call the API, e.g. server error or cannot deserialize the response body
      {{#vendorExtensions.x-is-deprecated}}
-     * @deprecated
+     * @deprecated {{#vendorExtensions.x-alternative-operation-id}}Use {@link #{{vendorExtensions.x-alternative-operation-id}}WithHttpInfo} instead{{/vendorExtensions.x-alternative-operation-id}}
      {{/vendorExtensions.x-is-deprecated}}
      {{#externalDocs}}
      * {{description}}
@@ -229,7 +229,7 @@ public class {{classname}} {
      * @return The request call
      * @throws ApiException If fail to process the API call, e.g. serializing the request body object
      {{#vendorExtensions.x-is-deprecated}}
-     * @deprecated
+     * @deprecated {{#vendorExtensions.x-alternative-operation-id}}Use {@link #{{vendorExtensions.x-alternative-operation-id}}Call} instead{{/vendorExtensions.x-alternative-operation-id}}
      {{/vendorExtensions.x-is-deprecated}}
      {{#externalDocs}}
      * {{description}}
