--- a/src/main/resources/handlebars/Java/libraries/retrofit/api.mustache
+++ b/src/main/resources/handlebars/Java/libraries/retrofit/api.mustache
@@ -57,7 +57,7 @@ public interface {{classname}} {
 {{/parameters}}
    * @param cb callback method
 {{#vendorExtensions.x-is-deprecated}}
-   * @deprecated
+   * @deprecated {{#vendorExtensions.x-alternative-operation-id}}Use {@link #{{vendorExtensions.x-alternative-operation-id~}} } instead{{/vendorExtensions.x-alternative-operation-id}}
 {{/vendorExtensions.x-is-deprecated}}
 {{#externalDocs}}
    * {{description}}
