--- a/src/main/resources/handlebars/Java/libraries/retrofit2/api.mustache
+++ b/src/main/resources/handlebars/Java/libraries/retrofit2/api.mustache
@@ -41,7 +41,7 @@ public interface {{classname}} {
 {{/parameters}}
    * @return Call&lt;{{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}Object{{/returnType}}&gt;
 {{#vendorExtensions.x-is-deprecated}}
-   * @deprecated
+   * @deprecated {{#vendorExtensions.x-alternative-operation-id}}Use {@link #{{vendorExtensions.x-alternative-operation-id~}} } instead{{/vendorExtensions.x-alternative-operation-id}}
 {{/vendorExtensions.x-is-deprecated}}
 {{#externalDocs}}
    * {{description}}
