--- a/src/main/resources/handlebars/Java/libraries/retrofit2/play25/api.mustache
+++ b/src/main/resources/handlebars/Java/libraries/retrofit2/play25/api.mustache
@@ -34,7 +34,7 @@ public interface {{classname}} {
 {{/parameters}}
    * @return Call&lt;{{#returnType}}{{returnType}}{{/returnType}}{{^returnType}}Void{{/returnType}}&gt;
 {{#vendorExtensions.x-is-deprecated}}
-   * @deprecated
+   * @deprecated {{#vendorExtensions.x-alternative-operation-id}}Use {@link #{{vendorExtensions.x-alternative-operation-id~}} } instead{{/vendorExtensions.x-alternative-operation-id}}
 {{/vendorExtensions.x-is-deprecated}}
    */
   {{#vendorExtensions.x-is-deprecated}}
