[Python][Client] Add missing import statement for warnings module

--- a/src/main/resources/handlebars/python/api.mustache
+++ b/src/main/resources/handlebars/python/api.mustache
@@ -11,6 +11,8 @@ import six
 
 from {{packageName}}.api_client import ApiClient
 
+import warnings
+
 
 {{#operations}}
 class {{classname}}(object):
